<resources>
    <string name="app_name">Shoe Store</string>

    <!-- Log In Screen -->
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="existing_account">Existing Account</string>
    <string name="invalid_email">Invalid E-Mail</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="logo_content_description">Logo</string>

    <!-- Welcome Screen -->
    <string name="initial_welcome">Welcome %s</string>
    <string name="return_welcome">Welcome Back %s</string>
    <string name="start">Start</string>

    <!-- Instructions Screen -->
    <string name="introduction_title">Welcome to Shoe Inventory</string>
    <string name="introduction_subtitle">Please enjoy your stay</string>

    <!-- Shoe List Screen -->
    <string name="add_new_item">Add new shoe item</string>

    <!-- Shoe Entry Screen -->
    <string name="name_label">Name</string>
    <string name="company_label">Company</string>
    <string name="shoe_size_label">Shoe Size</string>
    <string name="description_label">Description</string>
    <string name="menu_save">Save</string>
</resources>
