<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_16"
    tools:context="com.udacity.shoestore.navigation.LoginFragment">

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="0dp"
        android:layout_height="@dimen/min_item_height"
        android:layout_marginTop="@dimen/dp_16"
        android:gravity="center_vertical"
        android:labelFor="@id/emailEditText"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="@id/passwordLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/min_item_height"
        android:layout_marginStart="@dimen/dp_8"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBaseline_toBaselineOf="@id/emailLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/emailLabel"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/min_item_height"
        android:layout_marginTop="@dimen/dp_16"
        android:gravity="center_vertical"
        android:labelFor="@id/passwordEditText"
        android:text="@string/password"
        app:layout_constraintEnd_toStartOf="@+id/passwordEditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLabel" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/min_item_height"
        android:layout_marginStart="@dimen/dp_8"
        android:autofillHints="password"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@id/passwordLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/passwordLabel"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/createAccountButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/loginButton"
        app:layout_constraintTop_toTopOf="@+id/loginButton" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/emailGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="emailLabel,emailEditText" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/passwordGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="passwordLabel,passwordEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>
